--- a/app_festaNow/templates/festa_now/staff/notice/notice.html
+++ b/app_festaNow/templates/festa_now/staff/notice/notice.html
@@ -1,82 +1,230 @@
 {% extends 'base_copyright_version.html' %}
 {% block content %}
- 
-    <div class="row"  style="height:500px;">
-        <div class="col-md-5">
-                <a href="{% url 'staff_main' festa.id %}">뒤로</a>
-                <h1>Staff 공지사항</h1>
-                
-                <a href="{% url 'new_staff' festa.id %}">글쓰기 </a>
-                
-                
-                <hr>
-                {% for staff in staff_list %}
-                <br>
-                <a href="{% url 'detail_staff' festa.id staff.id %}"> : {{staff.title}}</a> 
-                {{staff.writer}}
-                {{staff.pub_date| date:"Y m d"}}
-                <br>
-                <a href="{% url 'edit_staff' festa.id staff.id %}" class="card-link">수정하기</a>
-                <a href="{% url 'delete_staff' festa.id staff.id %}" class="card-link">삭제하기</a>
-                {% endfor %}
-                <div class="middle">
-                    {%if staff_list.has_previous%}
-                    <a href="?page=1">First</a>
-                    <a href="?page={{staff_list.previous_page_number}}">Previous</a>
-                    {%endif%}
-    
-                    <span>{{staff_list.number}}</span>
-                    <span>of</span>
-                    <span>{{staff_list.paginator.num_pages}}</span>
-    
-                    {%if staff_list.has_next%}
-                    <a href="?page={{staff_list.next_page_number}}">Next</a>
-                    <a href="?page={{staff_list.paginator.num_pages}}">Last</a>
-                    {%endif%}
-                </div>
-
-
+<div id="contents_container">
+    <div id="staff_div">
+        <div id="staff_background">
+            <div class="title_div">Staff 공지사항</div>
+            <div id="table_bt_div_s">
+                    <div id="bt_write_div">
+                        <form action="{% url 'new_staff' festa.id %}" method="GET">
+                            <input id="write_bt_image" type="submit" value="&#xf040" class="7x">
+                            <input id="write_bt_text" type="submit" value="글쓰기">
+                        </form>
+                    </div>
+            
+                    <div id="table_div">
+                        <table>
+                            <tr id="kind_board">
+                                <td>구분</td>
+                                <td>제목</td>
+                                <td>작성자</td>
+                                <td>날짜</td>
+                                <td>시간</td>
+                            </tr>
+                            <!-- 공지등록 -->
+                            {% for staff in staff_list %}
+                            <tr class="notice_board">
+                                <td>공지사항</td>
+                                <td class="title_td">
+                                    <a href="{% url 'detail_staff' festa.id staff.id %}"> <span>{{staff.title}}</span></a>
+                                </td>
+                                <td>{{staff.writer}}</td>
+                                <td>{{staff.pub_date|date:"Y/m/d"}}</td>
+                                <td>{{staff.pub_date|time:"H:i"}}</td>
+                            </tr>
+                            {% endfor %}
+                        </table>
+                    </div>
+            </div>
         </div>
-
-        <div class="col-md-7" style="background-color:#EEE9F7; ">
-                <h1>Audience 공지사항</h1>
-                <a href="{% url 'new_audience' festa.id %}">글쓰기 </a>
-                
-                <hr>
-                {% for audience in audiences.all %}
-                <br>
-                <a href="{% url 'detail_audience' festa.id audience.id %}"> : {{audience.title}}</a> 
-                {{audience.writer}}
-                {{audience.pub_date}}
-                <br>
-                <a href="{% url 'edit_audience' festa.id audience.id %}" class="card-link">수정하기</a>
-                <a href="{% url 'delete_audience' festa.id audience.id %}" class="card-link">삭제하기</a>
-                {% endfor %}
-                <!-- <div class="middle">
-                    {%if audience_list.has_previous%}
-                    <a href="?page=1">First</a>
-                    <a href="?page={{audience_list.previous_page_number}}">Previous</a>
-                    {%endif%}
-    
-                    <span>{{audience_list.number}}</span>
-                    <span>of</span>
-                    <span>{{audience_list.paginator.num_pages}}</span>
-    
-                    {%if audience_list.has_next%}
-                    <a href="?page={{audience_list.next_page_number}}">Next</a>
-                    <a href="?page={{audience_list.paginator.num_pages}}">Last</a>
-                    {%endif%} -->
-
-
-        
-        </div>
-                
-          
-       
-
-
     </div>
-
-    
+    <div id="audience_div">
+            <div id="audience_background">
+                <div class="title_div">Audience 공지사항</div>
+                <div id="table_bt_div_a">
+                        <div id="bt_write_div">
+                            <form action="{% url 'new_audience' festa.id %}" method="GET">
+                                <input id="write_bt_image" type="submit" value="&#xf040" class="7x">
+                                <input id="write_bt_text" type="submit" value="글쓰기">
+                            </form>
+                        </div>
+                
+                        <div id="table_div">
+                            <table>
+                                <tr id="kind_board">
+                                    <td>구분</td>
+                                    <td>제목</td>
+                                    <td>작성자</td>
+                                    <td>날짜</td>
+                                    <td>시간</td>
+                                </tr>
+                                <!-- 공지등록 -->
+                                {% for audience in audiences.all %}
+                                <tr class="notice_board">
+                                    <td>공지사항</td>
+                                    <td class="title_td">
+                                        <a href="{% url 'detail_audience' festa.id audience.id %}"> <span>{{audience.title}}</span></a>
+                                    </td>
+                                    <td>{{audience.writer}}</td>
+                                    <td>{{audience.pub_date|date:"Y/m/d"}}</td>
+                                    <td>{{audience.pub_date|time:"H:i"}}</td>
+                                </tr>
+                                {% endfor %}
+                            </table>
+                        </div>
+                </div>
+            </div>
+        </div>
+</div>
 </body>
+<!-- 자바 스크립트 연결 -->
+{% load static %}
+<script type="text/javascript" src="/static/js/standard_js.js?ver=5' %}"></script>
+<style>
+    #contents_container{
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+    #staff_div, #audience_div{
+        width: 50%;
+
+    }
+    #staff_div{
+        padding-left: 100px;
+        padding-right: 20px;
+    }
+    #audience_div{
+        background: #f4f3ff;
+        padding-left: 20px;
+        padding-right: 100px;
+    }
+
+    .title_div{
+        width: 100%;
+        font-size: 1.5vw;
+        font-weight: bold;
+    }
+
+    #staff_background, #audience_background{
+        padding-top: 50px;
+    }
+    
+
+    /* content가 들어가 container */
+    #table_bt_div_a, #table_bt_div_s {
+        background: #ffffff;
+        padding-left: 3%;
+        padding-right: 3%;
+        padding-top: 2%;
+        padding-bottom: 5%;
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    #table_bt_div_s{
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+
+    /* 버튼 wrapper */
+    #bt_write_div {
+        width: 100%;
+    }
+
+    /* 테이블 wrapper */
+    #table_div {
+        width: 100%;
+    }
+
+    #table_intro {
+        font-size: 1vw;
+        font-weight: bold;
+    }
+
+    /* 카테고리 board, 실제 내용(공지사항) board -> 밑줄 긋는 css */
+
+    #kind_board,
+    .notice_board {
+        width: 100%;
+        font-size: 18px;
+    }
+
+    #kind_board {
+        border-bottom: 1px solid #000000;
+        font-weight: 500;
+    }
+
+    #kind_board td {
+        padding-top: 30px;
+    }
+
+    .notice_board {
+        border-bottom: 1px solid #6357ff;
+        color: #6357ff;
+    }
+
+    /* board 안에 있는 a 태그 */
+    .notice_board td a {
+        color: #6357ff;
+        text-decoration: none;
+    }
+
+    .notice_board td {
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+
+    /* 테이블 태그 */
+    table {
+        width: 100%;
+    }
+
+    /* table_div 안 모든 td 태그 */
+    td {
+        text-align: center;
+    }
+
+    /* 제목이 들어가는 특정 td */
+    .title_td {
+        width: 40%;
+    }
+
+    .title_td a span {
+        display: block;
+        width: 300px;
+        height: auto;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #bt_write_div form {
+        background: #eaeaea;
+        text-align: center;
+        display: inline-block;
+        padding: 7px 20px;
+    }
+
+    #bt_write_div form input {
+        border: 0px;
+    }
+
+    #write_bt_image {
+        width: auto;
+        padding: 1px;
+        font-family: 'FontAwesome';
+        background: none;
+        border: 0px;
+        padding: 0px;
+    }
+
+    #write_bt_text {
+        border: 0px;
+        background: none;
+        padding: 0px;
+    }
+</style>
 {% endblock %}
