--- a/project_festa/templates/base_copyright_version.html
+++ b/project_festa/templates/base_copyright_version.html
@@ -60,7 +60,7 @@
 
     {% block content %}
     {% endblock %}
-    <footer>
+    <footer id="footer_container">
         <div id="bt_footer_element">
             <div class="footer_item_top"><a href="#individual_information_policy">개인정보처리방침</a></div>
             <div class="footer_item_top"><a href="#agreement">이용약관</a></div>
