--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -2,10 +2,22 @@
 {% block content %}
 
 <div id="list_accompany_container">
-    <div id="subtitle_text_wrapper">
-        동행구하기
+
+    <div class="row justify-content-between">
+        <div class="col-4" id="subtitle_text_wrapper">
+            동행구하기
+        </div>
+        <div class="col-4" align="right" id="all">
+            <form action="" method="get">
+                <input type="text" name="search" value="{{ search }}">
+                <input type="submit" value="검색">
+            </form>
+        </div>
     </div>
-    <div id="table_bt_div">
+
+
+    <div id="table_bt_div" >
+
         <div id="bt_write_div">
             <form action="{% url 'create_accompany' festa.id %}" method="GET">
                 <input id="write_bt_image" type="submit" value="&#xf040" class="7x">
@@ -13,11 +25,6 @@
             </form>
         </div>
 
-        <!--검색기능-->
-        <form action="" method="get">
-            <input type="text" name="search" value="{{ search }}">
-            <input type="submit" value="검색">
-            </form>
 
         <div id="table_div">
             <table>
