레디 전체보기 연결 수정

--- a/app_festa/templates/festa_home/home.html
+++ b/app_festa/templates/festa_home/home.html
@@ -79,7 +79,7 @@
                     <p class="sub_text">다가오는 행사를 200배 더 즐겁게 즐기려면?</p>
                 </div>
                 <div class="col3" align="right" id = "all" >
-                    <a href="{% url 'all_festaNow' %}" style="color: black">전체보기</a>
+                    <a href="{% url 'all_festaReady' %}" style="color: black">전체보기</a>
                 </div>
 
 
@@ -291,6 +291,7 @@
     }
 
     .sub_text {
+        margin-top: 7px;
         margin-left: 10px;
         font-size: 18px;
         font-weight: 500;
